tests/errors/arity-too-many/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0104]: Parameter count mismatch: expected 1, but found 2.
  │
5 │ def main = double 1 2
  │            ^^^^^^
  ╰─𜱶 tests/errors/arity-too-many/main.pa:5:12
